--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: #fdf6f0;
@@ -46,6 +50,37 @@ body {
     text-decoration: none;
     color: #2c3e50;
   }
+
+  #experienceList {
+    max-width: 800px;
+    margin: 2rem auto;
+    padding: 0;
+    list-style: none;
+    text-align: left;
+  }
+  
+  #experienceList li {
+    background-color: #ffffff;
+    margin-bottom: 1rem;
+    padding: 1rem 1.5rem;
+    border-left: 5px solid #1ABC9C;;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  }
+
+  .delete-button {
+    background-color: #fff; 
+    color: #e35e50;
+    margin-top: 0.5rem;
+    padding: 0.5rem 1rem;
+    border: 1px solid #e35e50;
+    font-size: 0.9rem;
+  }
+  
+  .delete-button:hover {
+    background-color: #e35e50;
+    color: #fff;
+  }
   
   form {
     max-width: 600px;
@@ -91,24 +126,11 @@ body {
   button:hover {
     background-color: #16A085;
   }
-  
-  #experienceList {
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 0;
-    list-style: none;
-    text-align: left;
-  }
-  
-  #experienceList li {
-    background-color: #ffffff;
-    margin-bottom: 1rem;
-    padding: 1rem 1.5rem;
-    border-left: 5px solid #1ABC9C;;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-  }
 
+  #message {
+    color: red;
+  }
+  
   section {
     max-width: 800px;
     margin: 2rem auto;
@@ -119,45 +141,45 @@ body {
     text-align: left;
   }
 
-@media (max-width: 600px) {
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
+  @media (max-width: 600px) {
+    nav ul {
+      flex-direction: column;
+      align-items: center;
+      gap: 0.5rem;
+    }
+  
+    nav li {
+      padding: 0.5rem;
+      width: 100%;
+      text-align: center;
+    }
+  
+    form {
+      margin: 1rem;
+      padding: 1rem;
+    }
+  
+    section {
+      margin: 1rem;
+      padding: 1rem;
+    }
+  
+    h1, h2 {
+      font-size: 1.5rem;
+    }
+  
+    form input,
+    form textarea,
+    button {
+      font-size: 1rem;
+    }
+  
+    #experienceList {
+      margin: 1rem;
+      padding: 0 1rem;
+    }
+  
+    #experienceList li {
+      padding: 1rem;
+    }
   }
-
-  nav li {
-    padding: 0.5rem;
-    width: 100%;
-    text-align: center;
-  }
-
-  form {
-    margin: 1rem;
-    padding: 1rem;
-  }
-
-  section {
-    margin: 1rem;
-    padding: 1rem;
-  }
-
-  h1, h2 {
-    font-size: 1.5rem;
-  }
-
-  form input,
-  form textarea,
-  button {
-    font-size: 1rem;
-  }
-
-  #experienceList {
-    margin: 1rem;
-    padding: 0 1rem;
-  }
-
-  #experienceList li {
-    padding: 1rem;
-  }
-}
